マルチプロジェクト構成としてapp, lib, services:appの３つを追加しています。